This is the CHANGELOG for amavisd-milter.

20060124:
	Remove all files and directories in work directory because
	amavisd-new sometimes don't do it (e.q. when antivirus fail).

20060123:
	Limit maximum concurrent connections to amavisd:

	    amavisd-milter -m 4 -M 600

	means that there is limit to maximum 4 concurrent connections to
	amavisd and wait maximum 10 minutes (10*60 sec) for connection to
	amavisd.  When connection isn't available, amavisd-milter sleep for
	1 sec.  Every minute of waiting is sendmail triggered via
	smfi_progress.  When time limit run out then amvisd-milter return
	temporary fail.

20060113:
	amavisd-milter-1.0.4

	Bugfix release.  Added manual page amavisd-milter(8).

	INCOMPATIBILITY with 1.0.3 and previous version:

	Default working directory was changed from /var/amavis/tmp
	to /var/amavis to accordance with amavisd-new $helpers_home
	default value.  To go back to the previous behaviour run
	amavisd-milter with option -w /var/amavis/tmp

20060109:
	When stopping amavisd-new one (maybe not always just one) of milter
	threads amavisd-milter start to eat up a cpu time.
	Submitted by: Grzegorz Piszczek <grzegorz@piszczek.name>

	Fixed bug in mlfi_close(): amavisd-milter dies randomly due to
	segmentation fault.
	Submitted by: Grzegorz Piszczek <grzegorz@piszczek.name>

20051225:
	Added amavisd-milter(8) manual page.  README and website are
	synchronized with this manual page.

	Changed default working directory to /var/amavis (default value
	for amavisd-new helpers home directory).

20051204:
	Some users reports problem with ENOMEM in amavis_response().
	Consequently MAXAMABUF is increased from 1024 to 2048, amavis_request()
	and amavis_response() returns EOVERFLOW when buffer size isn't enough
	and truncated response is logged when debug level is >= 3.

20051202:
	Fixed default path to pidfile in README and website.
	Submitted by: Jerzy Sakol <jerzy.sakol@commgraf.pl>

20050829:
	Added amavisd-new configuration section to README.
