@@ -1,149 +1,0 @@
-This is the README for the amavisd-milter.
-
-amavisd-milter is a sendmail milter for amavisd-new 2.2.0 and above and
-sendmail 8.13.0 and above.
-
-Instead of older amavis-milter helper program, full amavisd-new functionality
-is available, including adding spam and virus information header fields,
-modifying Subject, adding address extensions and removing certain recipients
-from delivery while delivering the same message to the rest.
-
-You can visit amavisd-milter SourceForge project:
-
-    http://sourceforge.net/projects/amavisd-milter/
-
-
-General Notes:
-
-    A community mailing lists are available at:
-
-	 http://sourceforge.net/mail/?group_id=138169
-
-    Enhancements requests and problem reports are welcome.
-
-    If you run into problems first check the users mailing list archive
-    before asking questions on the list.  It's highly likely somebody has
-    already come across the same problem and it's been solved.
-
-
-Installation:
-
-    The basic installation instructions are in INSTALL.  You can use this
-    optional features for configure:
-
-	--enable-debug		   enable all compiler warnings
-	--with-sendmail-base=<DIR> base directory of sendmail distribution
-	--with-sendmail-obj=<DIR>  obj.* subdirectory in sendmail distribution
-
-
-Usage:
-
-    The following options can be passed to amavisd-milter to change the
-    default behaviour:
-
-	-d level		Set debug level
-	-f			Run this proces in the foreground
-	-h			Print this page
-	-m max-conns		Maximum concurrent amavisd connections
-				(default 0 - unlimited number of connections)
-	-M max-wait		Maximum wait for connection in seconds
-				(default 300 = 5 minutes)
-	-p pidfile		Use this pid file
-				(default /var/amavis/amavisd-milter.pid)
-	-s socket		Milter communication socket
-				(default /var/amavis/amavisd-milter.sock)
-	-S socket		Amavisd communication socket
-				(default /var/amavis/amavisd.sock)
-	-t timeout		Milter connection timeout in seconds
-				(default 600 = 10 minutes)
-	-T timeout		Amavisd connection timeout in seconds
-				(default 600 = 10 minutes)
-	-v			Report the version and exit
-	-w directory		Set the working directory
-				(default /var/amavis)
-
-
-Sockets:
-
-    Amavisd-milter uses two sockets for communications.  One is for
-    communication between sendmail and amavisd-milter (default socket is
-    /var/amavis/amavisd-milter.sock).  The protocol spoken over this
-    socket is MILTER (Mail FILTER).  It must agree with the INPUT_MAIL_FILTER
-    entry in sendmail.mc.
-
-    The other is for communication between amavisd-milter and amavisd
-    (default socket is /var/amavis/amavisd.sock).  The protocol spoken over
-    this socket is AM.PDP (AMavis Policy Delegation Protocol).  It must
-    agree with the $unix_socketname entry in amavisd.conf.
-
-    The both sockets timeout must be sufficient for whole check of the
-    message in amavisd.  It's a good idea to adjust both to the same value.
-
-
-Amavisd-new:
-
-    In amavisd.conf file change protocol and socket settings to:
-
-	$protocol = "AM.PDP";			   # Use AM.PDP protocol
-	$unix_socketname = "$MYHOME/amavisd.sock"; # Listen on Unix socket
-	### $inet_socket_port = 10024;		   # Don't listen on TCP port
-
-    Now (re)start amavisd daemon.
-
-
-Sendmail:
-
-    In the sendmail.mc file add the following entries (the last one is
-    mandatory):
-
-	define(`confMILTER_MACROS_ENVFROM',
-	    confMILTER_MACROS_ENVFROM``, {i}'')
-	INPUT_MAIL_FILTER(`amavisd-milter',
-	    `S=local:/var/amavis/amavisd-milter.sock,
-	    `F=T, T=S:10m;R:10m;E:10m')
-
-    Now rebuild your sendmail.cf file, install it (usually to
-    /etc/mail/sendmail.cf) and (re)start sendmail daemon.
-
-
-Amavisd-milter:
-
-    This example assume that amavisd-new is running as non-priviledged
-    user amavis.  It must agree with the entry $daemon_user in amavisd.conf.
-
-    First create working directory:
-
-	mkdir /var/amavis/tmp
-	chmod 750 /var/amavis/tmp
-	chown amavis /var/amavis/tmp
-
-    Then start amavisd-milter as non-priviledged users amavis:
-
-	su - amavis -c "amavisd-milter -w /var/amavis/tmp"
-
-
-Limit maximum concurrent connections to amavisd:
-
-        amavisd-milter -m 4 -M 600
-
-    means that there is limit to maximum 4 concurrent connections to
-    amavisd and wait maximum 10 minutes (10*60 sec) for connection to
-    amavisd.  When connection isn't available, amavisd-milter sleep for
-    1 sec.  Every minute of waiting is sendmail triggered via
-    smfi_progress.  When time limit run out then amvisd-milter return
-    temporary fail.
-
-
-References:
-
-[1] The amavisd-new home page
-    http://www.ijs.si/software/amavisd
-
-[2] Description of AM.PDP protocol
-    http://www.ijs.si/software/amavisd/README.protocol.txt
-
-[3] How to use amavis-milter
-    http://www.ijs.si/software/amavisd/README.milter.txt
-
-
-$Id: README,v 1.8 2005/12/25 22:36:53 reho Exp $
