@@ -1,6 +1,8 @@
 This is the CHANGELOG for amavisd-milter.
 
 20060124:
+	README is now generated from amavisd-milter(8) manual page.
+
 	Remove all files and directories in work directory because
 	amavisd-new sometimes don't do it (e.q. when antivirus fail).
 
@@ -105,4 +107,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.19 2006/01/23 15:15:48 reho Exp $
+$Id: CHANGES,v 1.20 2006/01/24 10:41:15 reho Exp $
